Expose something with adress information 'from rsgb'
