# src/orc/api/viewsets.py
@@ -1,10 +1,15 @@
 from rest_framework import viewsets
 
-from orc.datamodel.models import DomeinData
+from orc.datamodel.models import DomeinData, VerblijfsObject
 
-from .serializers import DomeinDataSerializer
+from .serializers import DomeinDataSerializer, VerblijfsObjectSerializer
 
 
 class DomeinDataViewSet(viewsets.ModelViewSet):
     queryset = DomeinData.objects.all()
     serializer_class = DomeinDataSerializer
+
+
+class VerblijfsObjectViewSet(viewsets.ModelViewSet):
+    queryset = VerblijfsObject.objects.all()
+    serializer_class = VerblijfsObjectSerializer
